@@ -11,6 +11,7 @@ IF ("${PORT}" STREQUAL "Efl")
     IF (ENABLE_WEBKIT2)
         ADD_SUBDIRECTORY(MiniBrowser/efl)
     ENDIF ()
+    ADD_SUBDIRECTORY(DumpRenderTree/TestNetscapePlugIn)
 ELSEIF ("${PORT}" STREQUAL "WinCE")
     ADD_SUBDIRECTORY(WinCELauncher)
 ENDIF()
